--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   
   <main></main>
-    <audio id="audio" src='avril.wav' loop></audio>  
-    <audio id="audio" src='snowstorm.wav' autoplay loop></audio>  
+    <audio id="audio" src='avril.mp3' loop></audio>  
+    <audio id="audio" src='snowstorm.mp3' autoplay loop></audio>  
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="mousetrap.min.js"></script>
