--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="UTF-8">
     <title>A Poem for My Father</title>
+    <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Josefin+Slab:700" rel="stylesheet">
     <link rel="stylesheet" href="reset.css" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-  <header>
-    <h2 id='title'>A Poem for my father</h2>
-    <h2 id='end'>Thanks, Pa</h2>
-    <p>Press 'spacebar' to move through the poem</p>
-  </header>
+    <header>
+      <h2 id='title'>A Poem for my father</h2>
+      <h2 id='end'>Thanks, Pa</h2>
+      <p id='desktop'>Press 'spacebar' to move through the poem</p>
+      <p id='mobile'>Tap to move through the poem</p>
+      <div id='some-element'></div>
+    </header>
 
-  
-  <main></main>
+    <main></main>
+
     <audio id="audio" src='avril.mp3' loop></audio>  
     <audio id="audio" src='snowstorm.mp3' autoplay loop></audio>  
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
