--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta property="og:image" content="www.poetmistry.com/dad-poem/preview.png"/>
     <title>A Poem for My Father</title>
     <meta name="viewport" content="width=device-width" />
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Josefin+Slab:700" rel="stylesheet">
@@ -17,9 +18,7 @@
     </header>
 
     <main></main>
-
-    <!-- <audio id="audio" src='avril.mp3' loop></audio>   -->
-    <!-- <audio id="bg-audio" src='snowstorm.mp3' autoplay loop></audio>   -->
+    
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.5.3/modernizr.min.js" type="text/javascript"></script>
     <script type="text/javascript" src="mousetrap.min.js"></script>
